# openscout

./: Cargo.toml  README.md  build.rs  openscout.toml  todo.md
src/: assignments.rs  main.rs
src/data/: mod.rs  openscout.rs  os_data.rs  season.rs  statbotics.rs  theblueallience.rs
