[package]
name = "openscout"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = "0.7.7"
chrono = "0.4.38"
log = "0.4.22"
mongodb = "3.1.0"
reqwest = {version = "0.12.9", features = ["json"]}
serde = "1.0.214"
serde_json = "1.0.132"
simplelog = "0.12.2"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
vergen = { version = "9.0.1", features = ["build"] }
