[package]
name = "openscout"
version = "2024.1.0-ALPHA"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = {version = "0.7.7", features = ["macros"]}
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
mongodb = "3.1.0"
reqwest = {version = "0.12.9", features = ["json"]}
schemars = "0.8.21"
serde = "1.0.214"
serde_json = "1.0.132"
simplelog = "0.12.2"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
vergen = { version = "9.0.1", features = ["build"] }
